# circuswiki-dev

./: .gitattributes  .gitignore  LICENSE  PROJECT_STRUCTURE.md  README-task-master.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  sync.ffs_db
.obsidian/: app.json  appearance.json  bookmarks.json  canvas.json  community-plugins.json  graph.json  hotkeys.json  types.json  vault-stats.json  workspace.json  workspaces.json
__project/: BatchRun.ffs_batch  RealTime.ffs_real  git-workflow  pdd.md  tasks.md
_canvas/: IT Infrastruktur.canvas  Trebor Aufgaben.canvas  Unbenannt.canvas
_dataview/: Dataview Search + Filter.md  List of non-existing pages.md  Notizen ohne Verlinkung außer vonzu einem MOC.md  Notizen ohne Verlinkung.md  Notizen ohne ausgehende Links.md  Notizen ohne eingehende Links.md  Spiele yaml check.md  dataview serializer.md  show Draft only.md
_inbox/: CircusWiki - Costs  CircusWiki - Technical Manual.md  Gandini - Patterns from Hell.md  Github Desktop.md  Github Pages.md  Kaskade 001 raw.md  Kaskade 002 raw.md  Kaskade 003 raw.md  Kaskade 004 raw.md  Kaskade 005 raw.md  Krankenhaus Hasche.md  Miniboden herstellen.md  Presentation Wiki Project.md  Translate py Software Architecture.md  Tätigkeitsberichte.md  Unbenannt 1.md  Unbenannt 2.md  Unbenannt.md  metadata schema.md
_system/: copy mass files code command line.txt  dateiliste.txt  liste spiele dateien.md
_templates/: add metadata.md  dataview.md  mermaid flowchart.md  mytemplate.md
circuswiki_dev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: html_config.yaml
docs/: Adler Hase Kohlkopf.md  Aufwärmspiele MOC.md  Ball werfen im Stern.md  (+68 more)
(+101 files in other folders)
